# clang-tools-extra

./: .gitignore  CMakeLists.txt  abseil-make-unique.diff  abseil_tip126.patch  diff.patch  mypatch.patch
clang-tidy/abseil/: AbseilTidyModule.cpp  AliasFreeHeadersCheck.cpp  AliasFreeHeadersCheck.h  AnonymousEnclosedAliasesCheck.cpp  AnonymousEnclosedAliasesCheck.h  CMakeLists.txt  MakeUniqueCheck.cpp  MakeUniqueCheck.h  QualifiedAliasesCheck.cpp  QualifiedAliasesCheck.h  SafelyScopedAliasesCheck.cpp  SafelyScopedAliasesCheck.h  SafelyScopedCheck.cpp  SafelyScopedCheck.h  WrapUniqueCheck.cpp  WrapUniqueCheck.h
clang-tidy/modernize/: CMakeLists.txt  MakeSmartPtrCheck.cpp  MakeSmartPtrCheck.h  ModernizeTidyModule.cpp  UseAutoForRangeCheck.cpp  UseAutoForRangeCheck.h
docs/: ReleaseNotes.rst
docs/clang-tidy/checks/: abseil-alias-free-headers.rst  abseil-anonymous-enclosed-aliases.rst  abseil-make-unique.rst  abseil-qualified-aliases.rst  abseil-safely-scoped-aliases.rst  abseil-safely-scoped.rst  abseil-wrap-unique.rst  list.rst  modernize-make-unique.rst  modernize-use-auto-for-range.rst  temp.cpp
test-tool/: CMakeLists.txt  DiffTemplate.cpp  a.cpp
test-tool/example/source/: CMakeLists.txt  TestAfter.cpp  TestBefore.cpp
test/clang-tidy/: abseil-alias-free-headers.cpp  abseil-alias-free-headers.hpp  abseil-anonymous-enclosed-aliases.cpp  abseil-make-unique.cpp  abseil-qualified-aliases.cpp  abseil-safely-scoped-aliases.cpp  abseil-safely-scoped.cpp  abseil-wrap-unique.cpp  modernize-use-auto-for-range.cpp  temp.cpp  temp.cpp.msg
